# 2026-07-soft-rasterizer-

./: README.md
soft-rasterizer/: .gitignore  CMakeLists.txt  build.bat  debug_camera.txt  run.bat  soft_rasterizer.sln  soft_rasterizer.vcxproj
soft-rasterizer/soft_rasterizer/x64/Debug/: soft_rasterizer.exe.recipe  soft_rasterizer.ilk  vc145.idb
soft-rasterizer/soft_rasterizer/x64/Debug/soft_rasterizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  soft_rasterizer.lastbuildstate
soft-rasterizer/soft_rasterizer/x64/Release/: soft_rasterizer.exe.recipe  soft_rasterizer.iobj  soft_rasterizer.ipdb
soft-rasterizer/soft_rasterizer/x64/Release/soft_rasterizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
soft-rasterizer/src/: main.cpp
soft-rasterizer/src/core/: AssetPath.cpp  AssetPath.h  Camera.cpp  Camera.h  Framebuffer.h  Mesh.cpp  Mesh.h  SceneObject.h  Vertex.h
soft-rasterizer/src/math/: Mat4.cpp  Mat4.h  Vec2.h  Vec3.h  Vec4.h
soft-rasterizer/src/render/: BloomPass.cpp  BloomPass.h  ColorGrade.cpp  ColorGrade.h  Interp.h  Lighting.cpp  Lighting.h  MaterialLibrary.cpp  MaterialLibrary.h  Rasterizer.cpp  Rasterizer.h  ShadowMap.h  Texture.cpp  Texture.h
soft-rasterizer/x64/Release/: soft_rasterizer.iobj  soft_rasterizer.ipdb
soft-rasterizer/x64/Release/soft_rasterizer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  soft_rasterizer.lastbuildstate  soft_rasterizer.write.1u.tlog
